feat!: generic usage